Refactor and unit test